--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h3> Summary of the Day</h3>
                 I think this was a fairly productive day. Also I'm posting a video here.
                 <br>
-                <video controls src="flower.webm" type="video/webm"></video>
+                <video controls src="flower.webm"></video>
             </section>
             <hr>
             <section id ="2021-04-09">
@@ -105,9 +105,9 @@
                 There are a lot of CSE 110 assignments coming up. 
                 I also learned that <b>b</b> is for drawing attention to text with boldface and <strong>strong</strong> is for indicating that text is important. <i>i</i> makes text italic,
                 while <em>em</em> makes it italic while also emphasizing it. 
-                The difference between <code>&ltb&gt</b></code> and <code>&ltstrong&gt</b></code> or <code>&lti&gt</b></code> and <code>&ltem&gt</b></code> might not be visible visually, but it matters to search engine crawlers and accessibilty software.
+                The difference between <code>&ltb&gt</code> and <code>&ltstrong&gt</code> or <code>&lti&gt</code> and <code>&ltem&gt</code> might not be visible visually, but it matters to search engine crawlers and accessibilty software.
                 <br>
-                <img src="upcomingassignments.PNG">
+                <img src="upcomingassignments.PNG" alt="upcomingassignments">
             </section>
             <hr>
             <section id="newpost">
