fixed string escape

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 There are a lot of CSE 110 assignments coming up. 
                 I also learned that <b>b</b> is for drawing attention to text with boldface and <strong>strong</strong> is for indicating that text is important. <i>i</i> makes text italic,
                 while <em>em</em> makes it italic while also emphasizing it. 
-                The difference between <code>&ltb&gt</code> and <code>&ltstrong&gt</code> or <code>&lti&gt</code> and <code>&ltem&gt</code> might not be visible visually, but it matters to search engine crawlers and accessibilty software.
+                The difference between <code>&lt;b&gt;</code> and <code>&lt;strong&gt;</code> or <code>&lt;i&gt;</code> and <code>&lt;em&gt;</code> might not be visible visually, but it matters to search engine crawlers and accessibilty software.
                 <br>
                 <img src="upcomingassignments.PNG" alt="upcomingassignments">
             </section>
